--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <button id="downloadPDF">Download CV (PDF)</button>
   </div>
 
-  <script src="script.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+
 </body>
 </html>
