--- a/index.html
+++ b/index.html
@@ -36,18 +36,22 @@
       border: 1px solid #ccc;
       border-radius: 6px;
     }
-    .education-entry {
+    .education-entry,
+    .experience-entry {
       display: flex;
       gap: 10px;
       flex-wrap: wrap;
+      margin-bottom: 15px;
     }
-    .education-entry input {
+    .education-entry input,
+    .experience-entry input,
+    .experience-entry textarea {
       flex: 1;
       min-width: 150px;
     }
     .btn {
-      margin-top: 20px;
-      padding: 12px 24px;
+      margin-top: 10px;
+      padding: 10px 20px;
       background-color: #2980b9;
       color: white;
       border: none;
@@ -63,19 +67,16 @@
 <body>
   <div class="container">
     <h1>Professional CV Generator</h1>
-    
+
     <form id="cvForm">
-      <!-- Personal Info -->
       <h2>Personal Info</h2>
       <input type="text" placeholder="Full Name" name="name" required />
       <input type="email" placeholder="Email" name="email" required />
       <input type="text" placeholder="Phone Number" name="phone" required />
 
-      <!-- Summary -->
       <h2>Summary</h2>
       <textarea name="summary" placeholder="Short professional summary..." required></textarea>
 
-      <!-- Education with Tabs -->
       <h2>Education</h2>
       <div id="educationSection">
         <div class="education-entry">
@@ -87,19 +88,27 @@
       </div>
       <button type="button" class="btn" onclick="addEducation()">+ Add Another Degree</button>
 
-      <!-- Experience -->
       <h2>Experience</h2>
-      <textarea name="experience" placeholder="Your experience..." required></textarea>
+      <div id="experienceSection">
+        <div class="experience-entry">
+          <input type="text" name="jobTitle[]" placeholder="Job Title" required />
+          <input type="text" name="company[]" placeholder="Company Name" required />
+          <input type="text" name="duration[]" placeholder="Duration" required />
+          <textarea name="jobDesc[]" placeholder="Describe your responsibilities..." required></textarea>
+        </div>
+      </div>
+      <button type="button" class="btn" onclick="addExperience()">+ Add Another Experience</button>
 
-      <!-- Skills -->
       <h2>Skills</h2>
-      <textarea name="skills" placeholder="List your skills..." required></textarea>
+      <div id="skillsSection">
+        <input type="text" id="skillInput" placeholder="Enter a skill and press Add" />
+        <button type="button" class="btn" onclick="addSkill()">+ Add Skill</button>
+        <ul id="skillsList" style="list-style-type: disc; margin-top: 10px; padding-left: 20px;"></ul>
+      </div>
 
-      <!-- Certifications -->
       <h2>Certifications</h2>
       <textarea name="certifications" placeholder="Any certifications?" required></textarea>
 
-      <!-- Interests -->
       <h2>Interests</h2>
       <textarea name="interests" placeholder="Your interests..." required></textarea>
 
@@ -118,13 +127,13 @@
     <p id="cvSummary"></p>
 
     <h2 style="color:#2c3e50;">🎓 Education</h2>
-    <div id="cvEducation"></div>
+    <ul id="cvEducation"></ul>
 
     <h2 style="color:#2c3e50;">💼 Experience</h2>
-    <p id="cvExperience"></p>
+    <ul id="cvExperience"></ul>
 
     <h2 style="color:#2c3e50;">🛠 Skills</h2>
-    <p id="cvSkills"></p>
+    <ul id="cvSkills"></ul>
 
     <h2 style="color:#2c3e50;">📜 Certifications</h2>
     <p id="cvCertifications"></p>
@@ -133,9 +142,10 @@
     <p id="cvInterests"></p>
   </div>
 
-  <script src="script.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
   <script>
+    let skillArray = [];
+
     function addEducation() {
       const section = document.getElementById('educationSection');
       const entry = document.createElement('div');
@@ -148,6 +158,86 @@
       `;
       section.appendChild(entry);
     }
+
+    function addExperience() {
+      const section = document.getElementById('experienceSection');
+      const entry = document.createElement('div');
+      entry.className = 'experience-entry';
+      entry.innerHTML = `
+        <input type="text" name="jobTitle[]" placeholder="Job Title" required />
+        <input type="text" name="company[]" placeholder="Company Name" required />
+        <input type="text" name="duration[]" placeholder="Duration" required />
+        <textarea name="jobDesc[]" placeholder="Describe your responsibilities..." required></textarea>
+      `;
+      section.appendChild(entry);
+    }
+
+    function addSkill() {
+      const input = document.getElementById('skillInput');
+      const skill = input.value.trim();
+      if (skill !== "") {
+        skillArray.push(skill);
+        const list = document.getElementById('skillsList');
+        const li = document.createElement('li');
+        li.innerText = skill;
+        list.appendChild(li);
+        input.value = "";
+      }
+    }
+
+    document.getElementById("downloadPDF").addEventListener("click", function () {
+      const form = document.getElementById("cvForm");
+      const formData = new FormData(form);
+
+      document.getElementById("cvName").innerText = formData.get("name");
+      document.getElementById("cvContact").innerText = `📧 ${formData.get("email")} | 📞 ${formData.get("phone")}`;
+      document.getElementById("cvSummary").innerText = formData.get("summary");
+      document.getElementById("cvCertifications").innerText = formData.get("certifications");
+      document.getElementById("cvInterests").innerText = formData.get("interests");
+
+      // Education entries
+      const educationList = document.getElementById("cvEducation");
+      educationList.innerHTML = "";
+      const degrees = formData.getAll("degree[]");
+      const institutions = formData.getAll("institution[]");
+      const years = formData.getAll("year[]");
+      const grades = formData.getAll("grade[]");
+      degrees.forEach((deg, i) => {
+        const li = document.createElement("li");
+        li.textContent = `${deg} - ${institutions[i]} (${years[i]}) - Grade: ${grades[i]}`;
+        educationList.appendChild(li);
+      });
+
+      // Experience entries
+      const expList = document.getElementById("cvExperience");
+      expList.innerHTML = "";
+      const jobs = formData.getAll("jobTitle[]");
+      const comps = formData.getAll("company[]");
+      const durs = formData.getAll("duration[]");
+      const descs = formData.getAll("jobDesc[]");
+      jobs.forEach((job, i) => {
+        const li = document.createElement("li");
+        li.innerHTML = `<strong>${job}</strong> at ${comps[i]} (${durs[i]})<br>${descs[i]}`;
+        expList.appendChild(li);
+      });
+
+      // Skills
+      const skillList = document.getElementById("cvSkills");
+      skillList.innerHTML = "";
+      skillArray.forEach(skill => {
+        const li = document.createElement("li");
+        li.textContent = skill;
+        skillList.appendChild(li);
+      });
+
+      const cvLayout = document.getElementById("cvTemplate");
+      html2pdf().from(cvLayout).set({
+        margin: [0.5, 0.5],
+        filename: `${formData.get("name")}_CV.pdf`,
+        html2canvas: { scale: 2 },
+        jsPDF: { unit: "in", format: "a4", orientation: "portrait" }
+      }).save();
+    });
   </script>
 </body>
 </html>
